--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,5 @@
   "alwaysUpdateLinks": true,
   "showFrontmatter": true,
   "defaultViewMode": "preview",
-  "fileSortOrder": "byModifiedTime"
+  "fileSortOrder": "alphabetical"
 }
