--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "214d8d2500b8b171",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Vue2响应式原理.md",
-            "mode": "preview"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -39,16 +36,17 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "URL 解析",
                 "matchingCase": false,
                 "explainSearch": false,
-                "collapseAll": false,
+                "collapseAll": true,
                 "extraContext": false,
                 "sortOrder": "alphabetical"
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -68,7 +66,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Vue2响应式原理.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,7 +82,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Vue2响应式原理.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -96,9 +92,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Vue2响应式原理.md"
-              }
+              "state": {}
             }
           },
           {
@@ -122,15 +116,15 @@
   },
   "active": "214d8d2500b8b171",
   "lastOpenFiles": [
-    "Vue2响应式原理.md",
-    "30x 状态码.md",
-    "Vite.md",
-    "vue2 vs vue3.md",
-    "索引.md",
-    "100 道面试题.md",
-    "浏览器渲染.md",
-    "DOM Tree 理解.md",
-    "requestAnimationFrame.md",
-    "documentFragment 使用.md"
+    "URL 解析参数.md",
+    "URL解析参数.md",
+    "HMR 热更新.md",
+    "HMR热更新.md",
+    "手写 JSONP.md",
+    "手写JSONP.md",
+    "LRU 缓存策略.md",
+    "LRU缓存策略.md",
+    "vue2 模板编译过程.md",
+    "vue2模板编译过程.md"
   ]
 }
