--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,23 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "81780d3c409a862b",
+        "id": "68507f8e2b111c14",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "vue2 vs vue3.md",
-            "mode": "preview"
-          }
-        }
-      },
-      {
-        "id": "9974ddc70ec09fc1",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Vite.md",
+            "file": "手写实现Promise.md",
             "mode": "preview"
           }
         }
@@ -59,8 +48,7 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -80,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "vue2 vs vue3.md",
+                "file": "手写实现Promise.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,7 +85,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "vue2 vs vue3.md",
+                "file": "手写实现Promise.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -109,28 +97,39 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "vue2 vs vue3.md"
+                "file": "手写实现Promise.md"
+              }
+            }
+          },
+          {
+            "id": "0210a079ed6b23a5",
+            "type": "leaf",
+            "state": {
+              "type": "tag",
+              "state": {
+                "sortOrder": "frequency",
+                "useHierarchy": true
               }
             }
           }
-        ]
+        ],
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "81780d3c409a862b",
+  "active": "68507f8e2b111c14",
   "lastOpenFiles": [
-    "vue2 vs vue3.md",
+    "手写实现Promise.md",
+    "浏览器.md",
+    "V8 引擎.md",
+    "GC 机制.md",
+    "V8引擎.md",
+    "内存管理.md",
     "Vite.md",
-    "Vue.md",
-    "JSBridge.md",
-    "模块化.md",
-    "documentFragment 使用.md",
-    "webpack 运行原理.md",
-    "JavaScript 中的数据结构.md",
-    "HTTP缓存机制.md",
-    "HTTP 缓存机制.md"
+    "JS作用域和作用域链.md",
+    "jsbridge1.png",
+    "jsbridge2.png"
   ]
 }
