--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "68507f8e2b111c14",
+        "id": "3efa886cdbb780e2",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "手写实现Promise.md",
+            "file": "JavaScript.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "手写实现Promise.md",
+                "file": "JavaScript.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,7 +85,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "手写实现Promise.md",
+                "file": "JavaScript.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -97,12 +97,12 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "手写实现Promise.md"
+                "file": "JavaScript.md"
               }
             }
           },
           {
-            "id": "0210a079ed6b23a5",
+            "id": "31cc0df494d1ee5d",
             "type": "leaf",
             "state": {
               "type": "tag",
@@ -119,17 +119,17 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "68507f8e2b111c14",
+  "active": "3efa886cdbb780e2",
   "lastOpenFiles": [
-    "手写实现Promise.md",
-    "浏览器.md",
-    "V8 引擎.md",
-    "GC 机制.md",
-    "V8引擎.md",
-    "内存管理.md",
-    "Vite.md",
-    "JS作用域和作用域链.md",
-    "jsbridge1.png",
-    "jsbridge2.png"
+    "JavaScript.md",
+    "实现call, apply, bind.md",
+    "JS 作用域和作用域链.md",
+    "JS 原型链.md",
+    "JS 继承.md",
+    "vue2 vs vue3.md",
+    "LeetCode 记录.md",
+    "documentFragment 使用.md",
+    "webpack 运行原理.md",
+    "webpack运行原理.md"
   ]
 }
