--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "JavaScript.md",
+            "file": "浏览器存储.md",
             "mode": "preview"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#browser",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -48,11 +48,12 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 237
   },
   "right": {
     "id": "5bde9680b6f8dda1",
@@ -68,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript.md",
+                "file": "浏览器存储.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "JavaScript.md",
+                "file": "浏览器存储.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -97,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "JavaScript.md"
+                "file": "浏览器存储.md"
               }
             }
           },
@@ -117,19 +118,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 245.60000610351562
   },
   "active": "3efa886cdbb780e2",
   "lastOpenFiles": [
-    "JavaScript.md",
-    "实现call, apply, bind.md",
-    "JS 作用域和作用域链.md",
-    "JS 原型链.md",
-    "JS 继承.md",
-    "vue2 vs vue3.md",
-    "LeetCode 记录.md",
-    "documentFragment 使用.md",
-    "webpack 运行原理.md",
-    "webpack运行原理.md"
+    "浏览器存储.md",
+    "浏览器缓存.md",
+    "Etag.md",
+    "UDP 协议.md",
+    "网络与缓存.md",
+    "TCP 协议.md",
+    "HTTP协议.md",
+    "HTTP 协议.md",
+    "HTTP3协议.md",
+    "HTTP缓存机制.md"
   ]
 }
