--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
-  "baseFontSize": 16,
-  "theme": "moonstone",
+  "baseFontSize": 18,
+  "theme": "obsidian",
   "translucency": false,
   "cssTheme": "Atom"
 }
