--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,6 @@
   "defaultViewMode": "preview",
   "fileSortOrder": "alphabetical",
   "tabSize": 2,
-  "promptDelete": false
+  "promptDelete": false,
+  "showLineNumber": true
 }
