--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
-  "baseFontSize": 18,
-  "theme": "obsidian",
+  "baseFontSize": 16,
+  "theme": "moonstone",
   "translucency": false,
-  "cssTheme": "Atom"
+  "cssTheme": "Blue Topaz"
 }
