--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "webpack 组成部分.md",
-            "mode": "source"
+            "file": "浏览器事件.md",
+            "mode": "preview"
           }
         }
       }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#browser",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -48,7 +48,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -68,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "webpack 组成部分.md",
+                "file": "浏览器事件.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "webpack 组成部分.md",
+                "file": "浏览器事件.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -97,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "webpack 组成部分.md"
+                "file": "浏览器事件.md"
               }
             }
           },
@@ -121,6 +122,8 @@
   },
   "active": "6e4045b1ac7affe4",
   "lastOpenFiles": [
+    "浏览器事件.md",
+    "浏览器.md",
     "webpack 组成部分.md",
     "webpack 运行原理.md",
     "webpack 打包优化.md",
@@ -128,8 +131,6 @@
     "webComponents.md",
     "Web Worker.md",
     "vuex.md",
-    "vue3 生命周期变化.md",
-    "vue2 vs vue3.md",
-    "Vue2 响应式原理.md"
+    "vue3 生命周期变化.md"
   ]
 }
