--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "17e63b0a9e747fed",
+        "id": "e9b6caaf33e88d9b",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -54,7 +54,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 283
+    "width": 271
   },
   "right": {
     "id": "5bde9680b6f8dda1",
@@ -119,9 +119,9 @@
       }
     ],
     "direction": "horizontal",
-    "width": 155
+    "width": 293.6000061035156
   },
-  "active": "17e63b0a9e747fed",
+  "active": "e9b6caaf33e88d9b",
   "lastOpenFiles": [
     "LeetCode 记录.md",
     "JavaScript 中的数据结构.md",
